# penrecon

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  pyproject.toml
.playwright-mcp/: page-2026-07-03T17-44-39-291Z.yml
src/penrecon/: __init__.py  __main__.py  db.py  ingest.py  models.py  queries.py
src/penrecon/parsers/: __init__.py  nmap.py  stubs.py
src/penrecon/web/: app.py
src/penrecon/web/static/: style.css
src/penrecon/web/templates/: _annotation.html  _attachments.html  _credentials.html  _host_credentials.html  _host_table.html  _hostnames.html  _icons.html  _notes.html  _services.html  base.html  credentials.html  diff.html  host.html  index.html  scans.html  search.html
tests/: conftest.py  fixtures.py  test_change.py  test_credentials.py  test_diff.py  test_export.py  test_hostnames.py  test_ip.py  test_manual.py  test_merge.py  test_nmap.py  test_routes.py  test_search.py  test_sort.py
